# document_managment

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  portugal.txt  pyproject.toml
infrastructure/airflow/: dockerfile
infrastructure/elasticSearch/: docker-compose.yml
infrastructure/https_server/: dockerfile  nginx.conf
infrastructure/spark/: dockerfile
infrastructure/sql_database/: dockerfile
infrastructure/tika/: docker-compose.yml
src/: __init__.py  fetch_data_from_s3.py  src.py
src/documents/: __init__.py  _elasticsearch_interaction.py  _parsing_documents.py  elasticsearch_interaction.py  parsing_documents.py  runner.py  test_ES.py
src/haystack/: interaction.py
tests/: test_elasticsearch_interaction.py
utilities/: __init__.py  _arg_parser.py  _logger.py
