[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.bandit]
skips = ["B101", "B608"]

[tool.black]
extend-exclude = '''
(
\.git |
\.__pycache__ |
\.hg |
\.mypy_cache |
\.tox |
\.venv |
_build |
buck-out |
build |
dist |
data
)
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py38"]


[tool.coverage.run]
branch = true
omit = [
  # Omit all files that make tables (for now)
  "datalakehouse/bronze_and_silver/*",
  "datalakehouse/gold/*",
  # Omit all `__init__.py` files
  "**/__init__.py",
  # Used for setting up the databricks environment
  "datalakehouse/control"
]


[tool.flake8]
extend-ignore = ["E203", "W503", "E402"]
extend-immutable-calls = ["pathlib.Path", "Path"]
max-complexity = 10
max-line-length = 120
per-file-ignores = "__init__.py:F401"

[tool.isort]
filter_files = true
known_first_party = ["TestingProject"]
known_third_party = ["tika", "elasticsearch", "haystack-ai"]
profile = "black"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
install_types = false  # Note: does not work with pre-commit
non_interactive = false  # Note: if needs installing check it is in precommit for mypy
plugins = "numpy.typing.mypy_plugin"
pretty = true
show_error_codes = true
warn_unused_configs = true

[tool.poetry]
authors = ['Pedro Neves <pedrocaldeiraneves@gmail.com>']
description = ""
name = "test_project"
packages = [{include = "src"}]
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.23.1"
pandas = "^1.4.3"
python = "^3.11"
haystack-ai = "2.6.1"
python-dotenv = "^1.0.1"
tika = "2.6.0"
elasticsearch = "^8.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pycodestyle]
max-line-length = 120

[tool.pydocstyle]
add_ignore = ["D107", "D203", "D213", "D413"]
convention = "numpy"

[tool.pylint]
disable = ["C0103", "R0903", "W0108", "W0107", "W0511"]
max-args = 10
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules"
filterwarnings = "ignore::DeprecationWarning"
